--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,3 @@
-# APP ID
-NEXT_PUBLIC_APP_ID=
-# APP API key
-NEXT_PUBLIC_APP_KEY=
-# API url prefix
-NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_APP_ID='ef53daf1-29fc-40fb-873a-56fa53c7b6fb' 
+NEXT_PUBLIC_APP_KEY='<Web API Key From Dify>' 
+NEXT_PUBLIC_API_URL='http://positive-saving-aardvark.ngrok-free.app/v1'
