--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_APP_ID='ef53daf1-29fc-40fb-873a-56fa53c7b6fb' 
-NEXT_PUBLIC_APP_KEY='<Web API Key From Dify>' 
+NEXT_PUBLIC_APP_KEY='app-51anxOMEK9zikQbYWinNtG9E' 
 NEXT_PUBLIC_API_URL='http://positive-saving-aardvark.ngrok-free.app/v1'
